# dpnm_validation

./: .gitignore  CMakeLists.txt  README.md  diffusion_script.py  plot.py  validation.py
convection/: CMakeLists.txt  convection.cpp  convection.h  createFields.h  wrapper.cpp
diffusion/: CMakeLists.txt  Equation.cpp  Equation.h  wrapper.cpp
diffusion/math/: Convective.cpp  Convective.h  Local.cpp  Local.h  Props.cpp  Props.h
inOut/convection/: .gitignore
inOut/convection/0/: U  p
inOut/convection/constant/: transportProperties
inOut/convection/constant/polyMesh/: boundary  faces  neighbour  owner  points
inOut/convection/system/: blockMeshDict  controlDict  controlDict.foam
sgrid/: CMakeLists.txt  Sgrid.cpp  Sgrid.h  SgridGetSet.cpp  SgridVtk.cpp  script.py  wrapper.cpp
